3.0.dev (xx/xx/xxxx)
--------------------

Development version.

2.5.1 (16/03/2018)
------------------

- Fix ``Spectrum.gauss_fit`` to always return a positive fwhm. [#501]

- Fix several issues with the ``CubeList`` C extension:

  - Avoid segfault with ``-std=c99``.

  - Fix compilation when NAN is not defined.

  - Fix the extension when not using OpenMP, which is still the case with Clang.
    Support for OpenMP with Clang will be addressed in the future.

- Changes to ``Cube.get_image``:

  - It's now possible to use any method from the Cube object that reduces the
    data on the wavelength axis to get an image, e.g. mean, sum, max...

  - The way to compute the background when asking for a summed image has
    changed. Before, it was computed averaging the pixel values of regions
    'below' and 'above' the kept wavelengths; now it is calculated as the mean
    of the average in each region. This may lead to slightly different results
    when working at the edge of the spectrum, when the width of the regions are
    different.

2.5 (02/03/2018)
----------------

- Numpy is now installed with ``setup_requires``, which means that it is no
  more required to run the setup, and it can be installed directly as
  a dependency.

- Allow to pickle MPDAF objects (``Cube``, ``Image``, ``Spectrum``,
  ``Source``). This makes it much easier to use these MPDAF objects with
  ``multiprocessing`` as they can now be passed transparently to the
  subprocesses.

- Allow to specify the wavelength range in ``Cube.subcube_circle_aperture``.

- Speedup ``create_psf_cube``, ``moffat_image`` and ``gauss_image``.

- Add option to plot images with world coordinates axes, using
  ``astropy.visualization.wcsaxes``. This can be used with
  ``Image.plot(..., use_wcs=True)``

Sources
~~~~~~~

- Better completions for Source attributes, and for keys in IPython.

- Allow to load a "fieldmap" from a dedicated file (in ``Source.add_FSF``).
